# brdf

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
ext/: CMakeLists.txt
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
include/brdf/: BRDFBase.h  BRDFImageSlice.h  BRDFMeasuredAniso.h  BRDFMeasuredMERL.h  DGLShader.h  MainWindow.h  SharedContextGLWidget.h  trim.h
probes/: wells.hdr
src/: BRDFImageSlice.cpp  BRDFMeasuredAniso.cpp  BRDFMeasuredMERL.cpp  DGLShader.cpp  MainWindow.cpp  main.cpp
